--- a/css/style.css
+++ b/css/style.css
@@ -1097,6 +1097,93 @@ a:focus {
 
 
 
+.projects-section {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: 'Montserrat', sans-serif;
+   
+  }
+  
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 28px;
+    color: #17a5be; /* Updated color */
+  }
+  
+  .projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+  }
+  
+  .project-card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 20px;
+    width: 500px;
+    background: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .project-card h3 {
+    margin-top: 0;
+    color: #17a5be; /* Updated color */
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  .project-description {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 15px;
+    line-height: 1.6;
+  }
+  
+  .project-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
+  .project-details {
+    margin-bottom: 15px;
+  }
+  
+  .project-details ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+  }
+  
+  .project-details ul li {
+    margin: 5px 0;
+    color: #555;
+  }
+  
+  .repo-link {
+    display: inline-block;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #17a5be; /* Updated color */
+    font-weight: bold;
+  }
+  
+  .repo-link:hover {
+    text-decoration: underline;
+    color: #005a70; /* Darker shade on hover */
+  }
+  
+  .project-image img {
+    max-width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+
 
 /*******************************/
 /********* Footer CSS **********/
